# zamm

./: .eslintrc.yaml  .gitmodules  .pre-commit-config.yaml  .prettierignore  Dockerfile  LICENSE.rtf  Makefile  README.md  RELEASE.md  documentation.zamm.md  package.json  pyproject.toml  tmux.sh
src-tauri/: .rustfmt.toml  Cargo.toml  Makefile  build.rs  clippy.py  clippy.sh  tauri.conf.json
src-tauri/api/: sample-call-schema.json
src-tauri/api/sample-call-requests/: continue-conversation.json  start-conversation.json
src-tauri/api/sample-calls/: chat-continue-conversation.yaml  chat-edit-conversation.yaml  chat-fork-conversation-python.yaml  chat-fork-conversation-rust.yaml  chat-manual-conversation-recreation.yaml  chat-re-edit-conversation.yaml  chat-start-conversation-ollama.yaml  chat-start-conversation.yaml  export_db-api-key.yaml  export_db-conversations.yaml  export_db-populated.yaml  export_db-terminal-sessions.yaml  get_api_call-continue-conversation.yaml  get_api_call-edit.yaml  get_api_call-future-service-provider.yaml  get_api_call-khmer.yaml  get_api_call-no-links.yaml  get_api_call-ollama.yaml  get_api_call-start-conversation.yaml  get_api_call-unknown-provider-prompt.yaml  get_api_calls-empty.yaml  get_api_calls-full.yaml  get_api_calls-offset-empty.yaml  get_api_calls-offset.yaml  get_api_calls-small.yaml  get_api_calls-unknown-future-provider.yaml  get_api_calls-unknown-provider-prompt.yaml  get_api_keys-empty.yaml  get_api_keys-openai.yaml  get_preferences-animation-speed-override.yaml  get_preferences-animations-override.yaml  get_preferences-extra-settings.yaml  get_preferences-high-dpi-adjust-on.yaml  get_preferences-no-file-mac.yaml  get_preferences-no-file-windows.yaml  get_preferences-no-file.yaml  get_preferences-sound-override.yaml  get_preferences-transparency-off.yaml  get_preferences-transparency-on.yaml  get_preferences-volume-override.yaml  (+41 more)
src-tauri/api/sample-database-writes/: conversation-started.yaml
src-tauri/api/sample-database-writes/command-run-bash/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/command-run-bash-interleaved/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/command-run-cmd/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/command-run-cmd-dir/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/command-run-date/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/conversation-continued/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/conversation-edited/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/conversation-edited-2/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/conversation-forked-step-1/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/conversation-forked-step-2/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/conversation-manually-recreated/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/conversation-started/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/conversation-started-ollama/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/different-openai-api-key/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/empty/: dump.yaml
src-tauri/api/sample-database-writes/future-service-provider/: dump.yaml
src-tauri/api/sample-database-writes/many-api-calls/: dump.sql  dump.yaml  generate.py
src-tauri/api/sample-database-writes/openai-api-key/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/sample-v0.1.3-db/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/sample-v0.1.4-db/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/unknown-provider-import/: dump.sql  dump.yaml
src-tauri/api/sample-database-writes/unknown-provider-prompt/: dump.yaml
src-tauri/api/sample-database-writes/unknown-provider-prompt-export/: dump.sql  dump.yaml
src-tauri/api/sample-disk-writes/sound-override/: preferences.toml
src-tauri/api/sample-disk-writes/volume-override/: preferences.toml
src-tauri/api/sample-init-files/no-file/: expected.bashrc
src-tauri/api/sample-init-files/no-newline/: .bashrc  expected.bashrc
src-tauri/api/sample-network-requests/: edit-conversation.json  fork-conversation-python.json  fork-conversation-rust.json  re-edit-conversation.json  start-conversation-ollama.json
src-tauri/api/sample-terminal-sessions/: bash.cast  date.cast  interleaved.py  pause.cast  pause.py  windows.cast
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns  icon.xcf
src-tauri/migrations/2024-01-07-035038_create_api_keys/: down.sql  up.sql
src-tauri/migrations/2024-01-13-023144_create_llm_calls/: down.sql  up.sql
src-tauri/migrations/2024-05-13-135101_add_api_call_continuations/: down.sql  up.sql
src-tauri/migrations/2024-05-13-135101_add_api_call_follow_ups/: down.sql  up.sql
src-tauri/migrations/2024-05-29-071520_ordered_names/: down.sql  up.sql
src-tauri/migrations/2024-05-29-183428_variant_links/: down.sql  up.sql
src-tauri/migrations/2024-06-27-125941_add_asciicasts/: down.sql  up.sql
src-tauri/src/: cli.rs  main.rs  python_api.rs  sample_call.rs  schema.rs  test_helpers.rs  upgrades.rs  views.rs
src-tauri/src/commands/: errors.rs  mod.rs  sounds.rs  system.rs  terminal.rs
src-tauri/src/commands/database/: export.rs  mod.rs  (+2 more)
src-tauri/src/models/: api_keys.rs  asciicasts.rs  database_contents.rs  llm_calls.rs  mod.rs  os.rs  shell.rs
src-tauri/src/setup/: api_keys.rs  db.rs  mod.rs
src-tauri/src/test_helpers/: api_testing.rs  database.rs  database_contents.rs  mod.rs  sqlite.rs  terminal.rs
(+514 files in other folders)
