[package]
name = "zamm"
version = "0.2.1"
description = "Yet another AI chat app"
authors = ["Amos Ng <me@amos.ng>"]
license = "GPL-2.0-or-later"
repository = "https://github.com/zamm-dev/zamm"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
diesel = { version = "2.1.0", features = ["sqlite", "uuid", "chrono"] }
directories = "5.0.1"
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
specta = { version = "=2.0.0-rc.20", features = ["uuid", "chrono"] }
tauri-specta = { version = "=2.0.0-rc.20", features = ["typescript"] }
futures = "0.3.28"
tauri-utils = "2"
thiserror = "1.0.47"
anyhow = "1.0.75"
mockall = "0.11.4"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
rodio = "0.17.1"
path-absolutize = "3.1.1"
toml = "0.8.2"
shellexpand = "3.1.0"
strum = "0.25.0"
strum_macros = "0.25.3"
async-openai = "0.18.0"
reqwest = "0.11.23"
reqwest-middleware = "0.1.6"
tokio = { version = "1.35.1", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
clap = { version = "4.5.4", features = ["derive"] }
version-compare = "0.2.0"
ollama-rs = "0.2.0"
asciicast = "0.2.2"
async-trait = "0.1.81"
shlex = "1.3.0"
either = "1.13.0"
portable-pty = "0.8.1"
regex = "1.11.1"
lazy_static = "1.5.0"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
specta-typescript = "0.0.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
cfg-if = "1.0.0"
rvcr = "0.1.5"
stdext = "0.3.2"
temp-env = "0.3.4"
vcr-cassette = "2.0.1"

[patch.crates-io]
async-openai = { path = "../forks/async-openai/async-openai" }
ollama-rs = { path = "../forks/ollama-rs" }
rvcr = { path = "../forks/rvcr" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-process = "2.0.1"
tauri-plugin-updater = "2"
